--- a/.github/workflows/terraform2.yml
+++ b/.github/workflows/terraform2.yml
@@ -16,8 +16,6 @@ env:
 jobs:
   terraform:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref == 'refs/heads/master' && 'prod' || 'dev' }} # Configura el entorno aquí
-
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
@@ -70,10 +68,11 @@ jobs:
 
       # Terraform Apply (Despliegue en dev y prod)
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+        if: github.ref == 'refs/heads/master'  # Solo aplicar en producción
         run: |
           cd ${{ env.tf_directory }}
           terraform apply -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        environment: prod  # Asociar este paso al entorno prod para requerir aprobación
