--- a/.github/workflows/terraform2.yml
+++ b/.github/workflows/terraform2.yml
@@ -38,6 +38,15 @@ jobs:
         with:
           terraform_version: 1.9.6
 
+      - name: Terraform Init
+        run: |
+          cd ${{ env.tf_directory }}
+          terraform init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        continue-on-error: false
+
       # Validación de Terraform antes de Plan y Apply
       - name: Terraform Validate
         run: |
